--- a/0_home.html
+++ b/0_home.html
@@ -96,7 +96,7 @@
       
       <div class="Cézanne-home">
         <a href="./6_cézanne.html" target="_self">
-          <img src="./img/6_Joueurs de cartes_Cézanne.jpeg" alt="Les Joueurs de cartes" class="scroll_cézanne">
+          <img src="./img/6_Cézanne.jpeg" alt="Les Joueurs de cartes" class="scroll_cézanne">
         </a>
         <p class="home_titolo-didascalia">Les Joueurs de cartes</p>
         <p class="autore">Paul Cézanne</p>
