--- a/0_home.html
+++ b/0_home.html
@@ -94,9 +94,9 @@
         <p class="desc">Copper engraving, 1513</p>
       </div>
       
-      <div class="Angelus-home">
-        <a href="./7_l'Angelus.html" target="_self">
-         <img src="./img/6_Cézanne.jpeg" alt="Les Joueurs de cartes" class="scroll_cézanne">
+      <div class="Cézanne-home">
+        <a href="./6_cézanne.html" target="_self">
+         <img src="./img/6_Cézanne.jpeg" alt="Les Joueurs de cartes" class="scroll_cézanne">
         </a>
         <p class="home_titolo-didascalia">Les Joueurs de cartes</p>
         <p class="autore">Paul Cézanne</p>
