--- a/6_cézanne.html
+++ b/6_cézanne.html
@@ -18,7 +18,7 @@
     <div class="row">
       
       <div class="col-md-6 colonna_immagine">
-        <img src="./img/6_Joueurs de cartes_Cézanne.jpeg" class="img-fluid dipinto_cézanne" alt="Les Joueurs de cartes">
+        <img src="./img/6_Cézanne.jpeg" class="img-fluid dipinto_cézanne" alt="Les Joueurs de cartes">
       </div>
       
       <div class="col-md-6 paragrafo_opera">
