--- a/0_home.html
+++ b/0_home.html
@@ -94,13 +94,13 @@
         <p class="desc">Copper engraving, 1513</p>
       </div>
       
-      <div class="Cézanne-home">
-        <a href="./6_cézanne.html" target="_self">
-         <img src="./img/11_Delacroix.jpeg" alt="Les Joueurs de cartes" class="scroll_cézanne">
+      <div class="Delacroix-home">
+        <a href="./6_delacroix.html" target="_self">
+         <img src="./img/11_Delacroix.jpeg" alt="Sardanapale" class="scroll_delacroix">
         </a>
-        <p class="home_titolo-didascalia">Les Joueurs de cartes</p>
-        <p class="autore">Paul Cézanne</p>
-        <p class="desc">Oil on canvas, 1890-1895</p>
+        <p class="home_titolo-didascalia">Sardanapale</p>
+        <p class="autore">Eugène Delacroix</p>
+        <p class="desc">Oil on canvas, 1827</p>
       </div>
 
       <div class="Angelus-home">
