Import Delacroix newspaper

--- a/6_delacroix.html
+++ b/6_delacroix.html
@@ -40,7 +40,7 @@
         <div id="sticky-element">
             <img src="./img/Timeline.png" alt="timeline" class="timeline_monalisa">
         </div>
-        <img src="./img/Cézanne_riviste.png" alt="riviste" class="riviste">
+        <img src="./img//Delacroix_riviste.png" alt="riviste" class="riviste">
       </div>
       
       <footer class="footer">
