--- a/0_home.html
+++ b/0_home.html
@@ -9,6 +9,8 @@
   
   <link rel="stylesheet" href="style.css">
   
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://fonts.googleapis.com; style-src 'self' https://fonts.googleapis.com 'unsafe-inline';">
+
 </head>
 <body>
   
