--- a/0_home.html
+++ b/0_home.html
@@ -9,7 +9,7 @@
   
   <link rel="stylesheet" href="style.css">
   
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://fonts.googleapis.com; style-src 'self' https://fonts.googleapis.com 'unsafe-inline';">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap; style-src 'self' https://fonts.googleapis.com 'unsafe-inline';">
 
 </head>
 <body>
