--- a/0_home.html
+++ b/0_home.html
@@ -29,7 +29,7 @@
         <h2>Interactive exploration <br>of art around the world</h2>
       </div>
       <div class="col-md-6 paragrafo_1">
-        <p>Art Journey is a journey through art history, discovering how artworks have been published around the world. Through a rich collection of data, it's possible to investigate the spread of artistic movements and artworks over time. By selecting a specific artwork you will be transported to its dedicated page where you can understand its worldwide distribution.
+        <p>Art Journey is a journey through art history, discovering how artworks have been published around the world through publications in magazines, posters, and periodicals. Through a rich collection of data, it's possible to investigate the spread of artistic movements and artworks over time. By selecting a specific artwork you will be transported to its dedicated page where you can understand its worldwide distribution.
         <br>An interactive map acts as a compass for this journey: you can explore the geographical spread of artistic publications, navigating between 1840 and 2018. Each point on the map represents a publication, colored according to the artistic movement of reference.
           <div>
             <a href="https://studio.foursquare.com/map/public/b41af9e5-6a5b-4106-8cff-0555967a1806">Open Map in a New Tab
@@ -49,7 +49,7 @@
       </div>
         <div class="col-md-6 paragrafo_1">
          <p>Art Journey is based on data from the University of Geneva’s Visual Contagions project, an initiative that aims to investigate how some images have been more successful than others throughout history, contributing to the globalization of culture.
-         Thanks to this project we can now explore the diffusion of art and investigate its circulation by understanding the paths and timelines with which they were spread.</p>
+         Thanks to this project we can now explore the diffusion of art and investigate its circulation by understanding the paths and timelines with which they were propagated.</p>
         </div>
     </div>
   </div>
