--- a/5_chevalier.html
+++ b/5_chevalier.html
@@ -35,6 +35,17 @@
       
       <iframe width="100%" height="650px" src="https://studio.foursquare.com/public/374d73d6-3ca6-402d-8d41-e3a506a61971/embed" frameborder="0" allowfullscreen></iframe>
       
+      <div class="container-fluid descrizione_1">
+        <div class="row">
+          <div class="col-md-6 sottotitolo_1">
+            <h2>Timeline</h2>
+          </div>
+          <div class="col-md-6 paragrafo_1">
+            <p>The timeline outlines the publications of the artwork in various magazines over time, providing a detailed analysis of its impact on the artistic culture of the period. <br>On the x axis (horizontal) is represented a timeline from 1840 to 2020, while on the y axis (vertical) are listed the names of the magazines.</p>
+          </div>
+        </div>
+      </div>
+
       <div class="container-timeline">
         <div id="sticky-element">
             <img src="./img/Timeline.png" alt="timeline" class="timeline_monalisa">
