--- a/3_venere.html
+++ b/3_venere.html
@@ -43,7 +43,7 @@
           <h2>Interactive map</h2>
         </div>
         <div class="col-md-6 paragrafo_1">
-          <p>The map reveals how the artwork <i>La Nascita di Venere</i> spread globally through publications in magazines, posters, and periodicals from 1840 to 2020. By exploring this interactive map, you can discover the wide reach and enduring popularity of this iconic painting, which is universally recognized as the world's most widely circulated artwork. Each dot on the map represents a publication of the work, offering an immersion into its journey through time and space.
+          <p>The map reveals how the artwork <i>La Nascita di Venere</i> spread globally through publications in magazines, posters, and periodicals from 1840 to 2020. Each dot on the map represents a publication of the work, offering an immersion into its journey through time and space.
            <div> <a href="https://studio.foursquare.com/map/public/3dcbd465-8da0-4ea2-927e-5b919ffeeea7">Open Map in a New Tab</a>
            </div>
           </p>
