--- a/6_delacroix.html
+++ b/6_delacroix.html
@@ -30,7 +30,7 @@
         <p class="artista">Eugène Delacroix</p>
         <p class="didascalia">1827 <br>Romanticism <br>Oil on canvas <br>Louvre Museum, Paris <br>395x425 cm</p>
         
-        <p class="testo_opera">Sardanapalus is one of the most emblematic works <br>of Romanticism. The painting depicts the dramatic final moment of the Assyrian king Sardanapalus who lies <br>on a sumptuous bed while observing the terrible carnage around him: brutally killed servants and concubines, panicked horses, and scattered riches. Delacroix seized upon this story as an excellent way to unite in a single painting all the themes dear to Romanticism, such as pathos, horror, exoticism, eroticism, and the "sublime" contrasted with the "beautiful." The diagonal composition and vivid colors accentuate the intense emotionality of the scene. The work has been interpreted as a reflection on the vanity <br>of power and human fragility in the face of destruction.</p>
+        <p class="testo_opera">Sardanapalus is one of the most emblematic works <br>of Romanticism. The painting depicts the dramatic final moment of the Assyrian king Sardanapalus who lies <br>on a sumptuous bed while observing the terrible carnage around him: brutally killed servants and concubines, panicked horses, and scattered riches. Delacroix seized upon this story as an excellent way to unite in a single painting all the themes dear to Romanticism, such as pathos, horror, exoticism, eroticism, and the "sublime" contrasted with the "beautiful." The diagonal composition and vivid colors accentuate the intense emotionality of the scene. The work has been interpreted as <br>a reflection on the vanity of power and human fragility in the face of destruction.</p>
           
         </div>
       </div>
