--- a/0_home.html
+++ b/0_home.html
@@ -33,7 +33,7 @@
         <h2>Interactive exploration <br>of art around the world</h2>
       </div>
       <div class="col-md-6 paragrafo_1">
-        <p>Art Journey is a journey through art history, discovering how artworks have been published around the world through publications in magazines, posters, <br>and periodicals. Through a rich collection of data, it's possible to investigate <br>the spread of artistic movements and artworks over time. By selecting a specific artwork you will be transported to its dedicated page where you can understand its worldwide distribution.
+        <p>Art Journey is a journey through art history, discovering how artworks have been published around the world through publications in magazines, posters, <br>and periodicals. Through a rich collection of data, it's possible to investigate <br>the spread of artistic movements and artworks over time. By selecting a specific artwork you will be transported to its dedicated page where you can understand <br>its worldwide distribution.
         <br>An interactive map acts as a compass for this journey: you can explore <br>the geographical spread of artistic publications, navigating between 1840 and 2020. Each point on the map represents a publication, colored according to the artistic movement of reference.
           <div>
             <a href="https://studio.foursquare.com/map/public/b41af9e5-6a5b-4106-8cff-0555967a1806">Open Map in a New Tab
